<resources>
    <string name="app_name">PhoneMate</string>
    <string name="title_activity_home">PhoneMate</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="home">Home</string>
    <string name="recommendation">Recommendation</string>
    <string name="profile">Profile</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="nav_privacy">About Us</string>
    <string name="menu_logout">Logout</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="about">About Us</string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="hello_profile_fragment">Hello profile fragment</string>
    <string name="hello_recommendation_fragment">Hello recommendation fragment</string>
    <string name="hello_feedback_fragment">Hello feedback fragment</string>
    <string name="hello_settings_fragment">Hello settings fragment</string>
    <string name="hello_privacy_fragment">\tNow days as everyone wants the best smart phone in the market and also each user has his
        or her own requirement hence it becomes difficult for the user to choose a precise Smartphone as the competition in the market
        is increasing day by day.\n\n \tSome users may require a good camera; some may require good battery life or some may need magnificent
        processors.
        Each user has different requirements and due to the vast options, sometimes the users may fall into a dilemma before buying their Smartphone.
        \n\n\tThis problem can be solved by providing a platform dedicated to helping the user choose their right Smartphone and also help them compare different smart phones with each other and help them choose the best
        This can be a smart way to choose your smart phone!\n\n
        \tThis application will focus dedicatedly on analysing the user inputs and providing an appropriate output in favour of the user.</string>
    <string name="category0">Smartphone</string>
    <string name="question0">Do you want a smartphone?</string>
    <string-array name="options0">
        <item>No</item>
        <item>Yes</item>
        <item>Option 1&#8211;3</item>
        <item>Option 1&#8211;4</item>
    </string-array>

    <string name="category1">OS</string>
    <string name="question1">Select Operating System</string>
    <string-array name="options1">
        <item>Android</item>
        <item>iOS</item>
        <item>Either Android or iOS</item>
        <item>Other</item>
    </string-array>

    <string name="category2">Price</string>
    <string name="question2">Use slider to select <b>maximum budget</b></string>
    <string-array name="options2">
        <item>Option 3&#8211;1</item>
        <item>Option 3&#8211;2</item>
        <item>Option 3&#8211;3</item>
        <item>Option 3&#8211;4</item>
    </string-array>

    <string name="category3">General Usage</string>
    <string name="question3">What is your basic requirement?</string>
    <string-array name="options3">
        <item>Photography</item>
        <item>All-rounder</item>
        <item>Entertainment</item>
        <item>Value for money</item>
    </string-array>

    <string name="category4">Battery</string>
    <string name="question4">Expected average usage</string>
    <string-array name="options4">
        <item>Low</item>
        <item>Medium</item>
        <item>Heavy</item>
        <item>Option 5&#8211;4</item>
    </string-array>

    <string name="category5">Storage</string>
    <string name="question5">Required Internal Memory</string>
    <string-array name="options5">
        <item>Low (Up to 8GB)</item>
        <item>Medium (Up to 32GB)</item>
        <item>Large (32GB+)</item>
        <item>Option 6&#8211;4</item>
    </string-array>

    <string name="category6">Camera</string>
    <string name="question6">Choose required camera specification</string>
    <string-array name="options6">
        <item>Low Quality (Up to 4MP)</item>
        <item>Medium (Up to 10MP)</item>
        <item>Good Quality (10MP+)</item>
        <item>Option 7&#8211;4</item>
    </string-array>

    <string name="category7">Screen Size</string>
    <string name="question7">Choose required screen size</string>
    <string-array name="options7">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Option 8&#8211;4</item>
    </string-array>

    <string name="category8">RAM</string>
    <string name="question8">How much RAM would you like you device to have?</string>
    <string-array name="options8">
        <item>Up to 1.5GB</item>
        <item>Up to 3GB</item>
        <item>3GB+</item>
        <item>Option 9&#8211;4</item>
    </string-array>

    <string name="category9">Weight</string>
    <string name="question9">Would you want a light weight device?</string>
    <string-array name="options9">
        <item>Yes</item>
        <item>Doesn\'t Matter</item>
        <item>Option 10&#8211;3</item>
        <item>Option 10&#8211;4</item>
    </string-array>

    <string name="lorem_ipsum2">
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu cursus massa. Quisque nec urna nisl. Morbi id tincidunt orci. Vestibulum aliquam posuere mi finibus imperdiet. Integer tincidunt erat non nisl efficitur faucibus. Pellentesque ut volutpat orci, in malesuada elit. Quisque dapibus, sapien non ultricies luctus, mauris magna viverra lorem, sed vulputate sapien quam sed ex. Cras fermentum mattis commodo. Proin pharetra scelerisque justo, vitae vulputate sapien tristique id. Mauris sollicitudin venenatis vehicula. Vivamus efficitur blandit mauris, id maximus dui pellentesque eu. Nam vel mattis arcu. Aliquam porttitor ex in dolor vestibulum, sodales rutrum tellus iaculis. Cras vestibulum risus quis dui laoreet auctor. Nam vel sem ex. Maecenas ut tempus neque.</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="server_client_id">789483030902-sr4ovo9dm6g97ev4124e43dq71dgmdbp.apps.googleusercontent.com</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_divider">or login with</string>
    <string name="action_sign_out">You have been signed out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="prompt_register">No account yet? Create one</string>

    <string name="red_os">Android 8.0\n<font color='red'>Android</font></string>
    <string name="title_activity_smartphone">Smartphone Activity</string>
    <string name="specs_os">OS</string>
    <string name="specs_display">Display</string>
    <string name="specs_chipset">Chipset</string>
    <string name="specs_ram">RAM</string>
    <string name="specs_storage">Storage</string>
    <string name="specs_camera">Camera</string>
    <string name="specs_battery">Battery</string>
    <string name="specs_connectivity">Connectivity</string>
    <string name="specs_cores">Cores</string>
    <string name="specs_audio">Audio</string>
    <string name="specs_network">Network</string>
    <string name="specs_dimensions">Dimensions</string>
    <string name="specs_colors">Colors</string>
    <string name="specs_headingL">Category</string>
    <string name="specs_headingR">Description</string>
    <string name="specs_review">Reviews Link</string>

    <string name="profile_picture">Profile Picture</string>
    <string name="edit_btn">Edit Profile contents</string>
    <string name="city_txt">City</string>
    <string name="email_txt">Email</string>
    <string name="name_txt">Name</string>
    <string name="phone_txt">Phone</string>
    <string name="save_btn">SAVE</string>

    <string name="signup_header"><b><u>Sign Up</u></b></string>
    <string name="forgot_otp">Enter email address</string>
    <string name="otp_btn">Confirm</string>
</resources>
